<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Main_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Android Security Demo"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/OneWayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="One-way Encryption"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/TwoWayBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TwoWayBtn"
        app:layout_constraintTop_toBottomOf="@+id/SelectOptionTextView" />

    <Button
        android:id="@+id/TwoWayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="Two-way En/Decryption"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OneWayBtn"
        app:layout_constraintVertical_bias="0.333" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="390dp"
        android:layout_height="322dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="@+id/SelectOptionTextView"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/SelectOptionTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/encryptionimage" />

    <TextView
        android:id="@+id/SelectOptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please select one option:"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/OneWayBtn"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/OneWayBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>